[gd_scene load_steps=25 format=3 uid="uid://cmavhbyg8iube"]

[ext_resource type="Script" path="res://characters/theo_character/theo_char.gd" id="1_lvfiq"]
[ext_resource type="Texture2D" uid="uid://bkk25mrtcdpbs" path="res://characters/theo_character/assets/idle_theo.png" id="2_jqqsp"]
[ext_resource type="Texture2D" uid="uid://d33aet62ej4n1" path="res://characters/theo_character/assets/sword_frame.png" id="3_h0ik8"]
[ext_resource type="Texture2D" uid="uid://tfukl1e2njgu" path="res://characters/theo_character/assets/running_frame.png" id="4_yeb8y"]
[ext_resource type="AudioStream" uid="uid://dhk0ssoi2fayq" path="res://ui/sound_assets/falling_theo_sound_cut.mp3" id="5_5b42e"]
[ext_resource type="Texture2D" uid="uid://c8tqeu111865r" path="res://characters/theo_character/assets/shoot_frames1.png" id="5_q5hhb"]
[ext_resource type="Texture2D" uid="uid://h5h4mfkuxcel" path="res://characters/theo_character/assets/jump_theo.png" id="6_58w76"]
[ext_resource type="AudioStream" uid="uid://dth6j28kiimc7" path="res://ui/sound_assets/hurt_theo_sound_cut.mp3" id="6_vdv0l"]
[ext_resource type="AudioStream" uid="uid://bi0kw8gys812m" path="res://ui/sound_assets/knockback_sound_cut.mp3" id="7_0p8bb"]
[ext_resource type="AudioStream" uid="uid://dgfr7rlho1hnh" path="res://ui/sound_assets/punch_theo_cut.mp3" id="8_d0y8p"]
[ext_resource type="AudioStream" uid="uid://dxmwg3uhetb34" path="res://ui/sound_assets/jump_theo_cut.mp3" id="9_k8sq8"]
[ext_resource type="AudioStream" uid="uid://cqk50alqgmiu1" path="res://ui/sound_assets/walking_sound_cut.mp3" id="10_3h10q"]
[ext_resource type="AudioStream" uid="uid://nj8ps0tatelw" path="res://ui/sound_assets/triple_gun_sound_cut.mp3" id="12_luu78"]
[ext_resource type="AudioStream" uid="uid://0dkqhqhfs1da" path="res://ui/sound_assets/sword_sound_cut.mp3" id="13_bdl6k"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_wp8qw"]
radius = 64.0
height = 864.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7xajh"]
size = Vector2(146.045, 48.5292)

[sub_resource type="Animation" id="Animation_5yeb6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Theo2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_jqqsp")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Theo2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Theo2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Theo2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("attack_sword/cs_attack_sword:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("attack_sword/cs_attack_sword:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(164.114, -344)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("attack_sword/cs_attack_sword:shape")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource("RectangleShape2D_7xajh")]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("attack_sword/cs_attack_sword:rotation")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.802301]
}

[sub_resource type="Animation" id="Animation_fcgg5"]
resource_name = "attack_sword_left"
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Theo2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_h0ik8")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Theo2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Theo2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Theo2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("attack_sword/cs_attack_sword:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [true, false, false, false, true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("attack_sword/cs_attack_sword:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.05, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(164.114, -344), Vector2(280, -200), Vector2(142.68, 97.1472)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("attack_sword/cs_attack_sword:shape")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0.05, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [SubResource("RectangleShape2D_7xajh"), SubResource("RectangleShape2D_7xajh"), SubResource("RectangleShape2D_7xajh")]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("attack_sword/cs_attack_sword:rotation")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0.05, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.802301, 3.14159, -2.44509]
}

[sub_resource type="Animation" id="Animation_t56e3"]
resource_name = "attack_sword_right"
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Theo2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_h0ik8")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Theo2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Theo2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Theo2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("attack_sword/cs_attack_sword:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [true, false, false, false, true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("attack_sword/cs_attack_sword:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.05, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-164.114, -344), Vector2(-280, -200), Vector2(-142.68, 97.147)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("attack_sword/cs_attack_sword:shape")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0.05, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [SubResource("RectangleShape2D_7xajh"), SubResource("RectangleShape2D_7xajh"), SubResource("RectangleShape2D_7xajh")]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("attack_sword/cs_attack_sword:rotation")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0.05, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [-0.802851, -3.14159, 2.44521]
}

[sub_resource type="Animation" id="Animation_2u8f1"]
resource_name = "handgun_left"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Theo2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_q5hhb")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Theo2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Theo2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Theo2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_b31e1"]
resource_name = "idle"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Theo2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_jqqsp")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Theo2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Theo2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Theo2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("attack_sword/cs_attack_sword:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_f3w2m"]
resource_name = "jump"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Theo2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("6_58w76")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Theo2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Theo2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Theo2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_uffbp"]
resource_name = "run"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Theo2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_yeb8y")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Theo2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Theo2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Theo2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_a68e1"]
_data = {
"RESET": SubResource("Animation_5yeb6"),
"attack_sword_left": SubResource("Animation_fcgg5"),
"attack_sword_right": SubResource("Animation_t56e3"),
"handgun_left": SubResource("Animation_2u8f1"),
"idle": SubResource("Animation_b31e1"),
"jump": SubResource("Animation_f3w2m"),
"run": SubResource("Animation_uffbp")
}

[node name="theo_char" type="CharacterBody2D"]
scale = Vector2(0.2, 0.2)
script = ExtResource("1_lvfiq")

[node name="Theo2D" type="Sprite2D" parent="."]
texture = ExtResource("2_jqqsp")

[node name="char_box" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_wp8qw")

[node name="AnimTheo" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_a68e1")
}

[node name="attack_sword" type="Area2D" parent="."]

[node name="cs_attack_sword" type="CollisionShape2D" parent="attack_sword"]
position = Vector2(164.114, -344)
rotation = 0.802301
shape = SubResource("RectangleShape2D_7xajh")

[node name="Bulletmark_rigth" type="Marker2D" parent="."]
position = Vector2(-320, -280)

[node name="Bulletmark_left" type="Marker2D" parent="."]
position = Vector2(320, -280)

[node name="Timer" type="Timer" parent="."]
process_callback = 0
wait_time = 0.5
one_shot = true

[node name="theo_falling_snd" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_5b42e")
bus = &"SFX"

[node name="theo_hurt_snd" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_vdv0l")
pitch_scale = 1.03
bus = &"SFX"

[node name="knockback_snd" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_0p8bb")
bus = &"SFX"

[node name="theo_punch_snd" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_d0y8p")
bus = &"SFX"

[node name="theo_jump_snd" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_k8sq8")
bus = &"SFX"

[node name="walking_snd" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_3h10q")
bus = &"SFX"

[node name="theo_hangn" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("12_luu78")
bus = &"SFX"

[node name="sword_snd" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("13_bdl6k")
bus = &"SFX"

[connection signal="body_entered" from="attack_sword" to="." method="_on_attack_sword_body_entered"]
